--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,11 @@
 			<artifactId>jjwt-api</artifactId>
 			<version>${maven.dependency.jjwt.version}</version>
 		</dependency>
+		<dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <scope>test</scope>
+</dependency>
 
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
